style: improve layout spacing and hover effects in header navigation

--- a/Assignments/Week2/web/index.html
+++ b/Assignments/Week2/web/index.html
@@ -28,7 +28,7 @@
   </nav>
 
 	<div id="login">
-		<a href="/auth.html">Login/Register</a>
+		<a href="auth.html">Login/Register</a>
 	</div>
 
 	</div>
