feat: add login/register page layout with styling and navigation

--- a/Assignments/Week2/web/auth.html
+++ b/Assignments/Week2/web/auth.html
@@ -1,11 +1,37 @@
 <html>
 
 <head>
-
+    <title>Login/Register</title>
+    <link rel="shortcut icon" type="image/png" href="logo.png">
+    <link rel="stylesheet" href="css/genel.css">
 
 </head>
 
-<body>
+<body class="body">
+    <div id="login-container">
+
+        <div id="auth-grid">
+
+        <div id="login-card">
+
+        </div>
+
+        <div id="register-card">
+
+
+        </div>
+
+        </div>    
+
+
+
+
+
+
+    </div>
+
+
+
     
 </body>
 
