--- a/Assignments/Week2/web/index.html
+++ b/Assignments/Week2/web/index.html
@@ -4,7 +4,7 @@
 	</title>
 	
 	
-	<link rel="shortcut icon" type="image/png" href="/favicon.ico">
+	<link rel="shortcut icon" type="image/png" href="logo.png">
 	
 	<link rel="stylesheet" href="css/genel.css">
 	</head>
