--- a/Assignments/Week2/web/auth.html
+++ b/Assignments/Week2/web/auth.html
@@ -13,10 +13,13 @@
         <div id="auth-grid">
 
         <div id="login-card">
+            <h1 id="auth-text">Login</h1>
+
 
         </div>
 
         <div id="register-card">
+            <h2 id="auth-text">Register</h2>
 
 
         </div>
