--- a/Assignments/Week2/web/auth.html
+++ b/Assignments/Week2/web/auth.html
@@ -14,12 +14,53 @@
 
         <div id="login-card">
             <h1 id="auth-text">Login</h1>
+            <form id="login-form" action="#">
+                <div class="field">
+                    <label for="login-email">E-posta</label>
+                    <input type="login-email" name="email" tpye="email" placeholder="ornek@example.com" required autocomplete="email">
+                </div>
+
+                <div class="field">
+                    <label for="login-password">Şifre</label>
+                    <input type="login-password" name="password" type="password" placeholder="*******" required autocomplete="current-password">
+                </div>
+
+                <div class="auth-button">
+                    <button type="submit" class="btn">Giriş yap</button>
+                </div>
+
+            </form>
 
 
         </div>
 
         <div id="register-card">
             <h2 id="auth-text">Register</h2>
+            <form  id="register-form" action="#">
+                <div class="field">
+                    <label for="register-name">Ad-Soyad</label>
+                    <input type="register-name" name="name" type="text" placeholder="Ad-Soyad" required autocomplete="name">
+                </div>
+
+                <div class="field">
+                    <label for="register-email">E-posta</label>
+                    <input id="register-email" name="email" type="email" placeholder="ornek@example.com" required autocomplete="email">
+                </div>
+
+                <div class="field">
+                    <label for="register-password">Şifre</label>
+                    <input type="register-password" name="password" type="password" placeholder="*******" required autocomplete="new-password">
+                </div>
+
+                <div class="auth-button">
+                    <button type="submit" class="btn">Kayıt Ol</button>
+                </div>
+
+
+
+
+
+            </form>
 
 
         </div>
