fix: add charset meta tag to HTML files for proper character encoding

--- a/Assignments/Week3/Week3.Web/wwwroot/auth.html
+++ b/Assignments/Week3/Week3.Web/wwwroot/auth.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>Login/Register</title>
     <link rel="shortcut icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="css/genel.css">
