feat: implement authentication endpoints for user registration and login, add password hashing service, and update app settings for database connection

--- a/Assignments/Week3/Week3.Web/wwwroot/auth.html
+++ b/Assignments/Week3/Week3.Web/wwwroot/auth.html
@@ -5,7 +5,11 @@
     <title>Login/Register</title>
     <link rel="shortcut icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="css/genel.css">
-
+	<style>
+		.toast{position:fixed;right:16px;bottom:16px;background:#10b981;color:#000;padding:10px 14px;border-radius:10px;font-weight:700;box-shadow:0 6px 20px rgba(0,0,0,.25);z-index:9999;opacity:0;transform:translateY(8px);transition:opacity .2s ease,transform .2s ease}
+		.toast.show{opacity:1;transform:translateY(0)}
+		.toast.error{background:#fca5a5}
+	</style>
 </head>
 
 <body class="body">
@@ -18,12 +22,12 @@
             <form id="login-form" action="#">
                 <div class="field">
                     <label for="login-email">E-posta</label>
-                    <input type="login-email" name="email" tpye="email" placeholder="ornek@example.com" required autocomplete="email">
+                    <input type="email" name="email" placeholder="ornek@example.com" required autocomplete="email">
                 </div>
 
                 <div class="field">
                     <label for="login-password">Şifre</label>
-                    <input type="login-password" name="password" type="password" placeholder="*******" required autocomplete="current-password">
+                    <input name="password" type="password" placeholder="*******" required autocomplete="current-password">
                 </div>
 
                 <div class="auth-button">
@@ -40,7 +44,7 @@
             <form  id="register-form" action="#">
                 <div class="field">
                     <label for="register-name">Ad-Soyad</label>
-                    <input type="register-name" name="name" type="text" placeholder="Ad-Soyad" required autocomplete="name">
+                    <input name="name" type="text" placeholder="Ad-Soyad" required autocomplete="name">
                 </div>
 
                 <div class="field">
@@ -50,7 +54,7 @@
 
                 <div class="field">
                     <label for="register-password">Şifre</label>
-                    <input type="register-password" name="password" type="password" placeholder="*******" required autocomplete="new-password">
+                    <input name="password" type="password" placeholder="*******" required autocomplete="new-password">
                 </div>
 
                 <div class="auth-button">
@@ -79,6 +83,71 @@
 
     
 </body>
+
+<script>
+	function showToast(message, isError){
+		const t = document.createElement('div');
+		t.className = 'toast' + (isError ? ' error' : '');
+		t.textContent = message;
+		document.body.appendChild(t);
+		requestAnimationFrame(()=>t.classList.add('show'));
+		setTimeout(()=>{
+			t.classList.remove('show');
+			setTimeout(()=>t.remove(), 180);
+		}, 2200);
+	}
+
+	document.getElementById('register-form').addEventListener('submit', async (e)=>{
+		e.preventDefault();
+		const form = e.currentTarget;
+		const payload = {
+			name: form.elements['name']?.value?.trim() || '',
+			email: form.elements['email']?.value?.trim() || '',
+			password: form.elements['password']?.value || ''
+		};
+		try{
+			const res = await fetch('/api/auth/register',{
+				method:'POST',
+				headers:{'Content-Type':'application/json'},
+				body: JSON.stringify(payload)
+			});
+			if(res.ok){
+				showToast('Başarıyla kayıt oldunuz');
+				form.reset();
+			}else{
+				let msg = 'Kayıt başarısız';
+				try{ const j = await res.json(); if(j?.message) msg = j.message; }catch{}
+				showToast(msg, true);
+			}
+		}catch(err){
+			showToast('Bağlantı hatası', true);
+		}
+	});
+
+	document.getElementById('login-form').addEventListener('submit', async (e)=>{
+		e.preventDefault();
+		const form = e.currentTarget;
+		const payload = {
+			email: form.elements['email']?.value?.trim() || '',
+			password: form.elements['password']?.value || ''
+		};
+		try{
+			const res = await fetch('/api/auth/login',{
+				method:'POST',
+				headers:{'Content-Type':'application/json'},
+				body: JSON.stringify(payload)
+			});
+			if(res.ok){
+				showToast('Giriş başarılı');
+			}else{
+				showToast('E-posta veya şifre hatalı', true);
+			}
+		}catch(err){
+			showToast('Bağlantı hatası', true);
+		}
+	});
+
+</script>
 
 
 
